# SCHWordCloud

./: .gitignore  README.md  pyproject.toml  run.py  run_wordcloud.bat
src/schwordcloud/: __init__.py  config.py  config.toml  runschwordcloud.py  schwordcloud.py
src/schwordcloud/datamanager/: __init__.py  annotation.py  datamanager.py  datasets.py  sch.py
src/schwordcloud/websearch/: __init__.py  base.py  bing.py  google.py
tests/: bingsearch.ipynb  convert_search_history.ipynb  datasets.ipynb  run_wordcloud.ipynb  wordcloud-offline.ipynb  wordcloud.ipynb
