[project]
name = "schwordcloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxwel de Souza Freitas", email = "maxwel@maxwelfreitas.com.br" }
]
requires-python = ">=3.13"
dependencies = [
    "flatdict>=4.0.1",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
